tests/expectations/compiler/dyn_record/dyn_record_multiple_fields.out
Error [EPAR0370005]: expected 'record' -- found '='
    --> compiler-test:9:20
     |
   9 |         let d: dyn = t as dyn;
     |                    ^
